# HPC_IOpatterns

./: README.md  darshan-dxt-to-json.py  summit_runs.md
TAU/: ANDES.md  README.md  adios-example.md  simple-example.md
TAU/code/: CMakeLists.txt  adios_write.cpp  simple_read.cpp
TAU/example_logs/: adios_OpforWr.yaml  simple_OpCl.yaml  simple_cpp_OpRdCl.yalm
aggregated-patterns/: Features.md  README.md
aggregated-patterns/clustering/: create_balanced_dataset.py  extract_clusters.py
aggregated-patterns/extract_logs/: extract_logs.sh
aggregated-patterns/features/: extract_aggregated_features.py  extract_dxt_features.py  extract_feature_list.py  features.filter.header  features.header  merge_feature_files.py  (+1 more)
analysis/: Features.md  README.md  darshan_features.desc  extract_aggregated_features.py  extract_feature_list.py  extract_job_info.sh  extract_logs.sh  extract_metadata_features.py  features.desc.csv  plot_dxt_logs.ipynb  reproduce_anl.ipynb
applications/: ANDES.md  README.md  posix-tau-example.md
benchmark/: Dockerfile  IOR-benchmark.md  README.md  skel.md
lammps/: .README.md.swp  README.md  adios2_config.xml  asphere-trace.darshan  batch_summit.sh  elastic-trace.darshan
nwchem/: README.md  adios2.xml  batch_summit.sh  build_nwchem.sh  copro.nw  copro.top  runconf.nwchem
simple_example/: CMakeLists.txt  README.md  simple-io.c
summit/: README.md
time-series-patterns/: README.md  combine_multiple_logs.py  extract_patterns_json.py  sanity_check.py  split_log_in_multiple.py
warpx/: README.md  batch_summit.sh  output.txt  warpx.profile
(+68 files in other folders)
